# message-handler

./: .gitignore  CMakeLists.txt  Program.cpp  README.md  lib.pro
include/: DatabaseHandler.hpp  EdgeHandler.hpp  MmiHandler.hpp  MqttHandler.hpp  MqttInterface.hpp  mqttclientbase.h  testmqtt.hpp
include/msg/: msgbase.h  msgdevice.h  msgedge.h
src/: DatabaseHandler.cpp  EdgeHandler.cpp  MmiHandler.cpp  MqttHandler.cpp  MqttInterface.cpp  mqttclientbase.cpp  testmqtt.cpp
src/msg/: msgdevice.cpp  msgedge.cpp
tests/: CMakeLists.txt
